src/styles.scss
$headerHeight: 50px;

html {
  scroll-behavior: smooth;
}

:root { 
   
  /* Native font stack https://getbootstrap.com/docs/4.2/content/reboot/#native-font-stack */
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
    "Helvetica Neue", Arial, sans-serif;
  font-size: large;
  line-height: 1.5;
  text-align: center;
  color: #333;
  margin: 0px;
  padding: 0px;  
  text-align: center;
  
  border-style: dashed;
  border-color: red;
  border-width: 0px; 
  min-height: 500px;
  min-width: 400px;
  /*overflow-y: hidden;*/ 
  overflow: auto;
 
}

/*For development */
.show-border, 
#title-row, 
#text-area-row, 
.textarea-container,
.container {
  border-style: dashed;
  border-color: grey;
  border-width: 0px; 
}

.blue,
#wrapper {
  border-color: yellow !important;
}

#wrapper {     
  
  #title-row {  
    position: absolute;
    top: 0px;
    left: 0px;
    z-index: 100;
    text-align: center;  
    height: 10%;
    width: 100%; 
    margin: 0;
    padding: 0px;
    box-shadow: 0px 1px 10px grey;
    
    h1 {   
      width: 100%;
      font-size: 1.5em;
    }
  }
  
  #text-area-row {
    position:  absolute;
    //height: calc(60vh - $headerHeight);
    height: 89%;
    top: 11%; 
    width: 100%;
    padding: 0;
    
    //min-height: 1px;
    
    .textarea-container {   
      padding: 10px;  
      margin: 0px;
      -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
      -moz-box-sizing: border-box;    /* Firefox, other Gecko */
      box-sizing: border-box; 
      height: 100%;
      overflow-y: auto; 
      width: 100%; 
      
    }
 
    #preview { 
      //overflow: auto;
      //overflow-y: auto;

      pre {
        width: 100%;
        overflow: auto;
        white-space: pre-wrap;
        word-wrap: break-word; 
      }

      blockquote{ 
        font-style: italic;
        margin-left: 10px;

        p::before,
        p::after {
          content: '"'; 
          font-size: 2em;
          padding-left: 0px;
          font-weight: 500; 
          
        }
      }

      code {
        width: 100%;
        display: block;
        border-width: 1px;
        border-style: solid;
        background-color: rgba(200,200,200,0.25);
        border-radius: 5px;
        padding: 10px;
        margin-top: 5px;
        margin-bottom: 5px;

      }

      table {
        border-collapse: collapse;
        overflow-x: auto;
        border: 2px solid black;
        margin: 20px 0px;
      }
       
      th, td {
        padding: 10px;
        border: 0.5px solid grey;
      }

      th {
        border-bottom: 2px solid black;
        background-color: black;
        color: white;
      }

      td {
        vertical-align: top;
      } 

      tr:nth-child(even) {
        background-color: rgba(200,200,200,0.15);
      }

      tr:hover {
          background-color: rgba(200,200,200,0.5);
      }

      li {
        margin: 5px 0px;
      }

      a {
        position:relative; /* making the .tooltip span a container for the tooltip text */
  
      }

      a:before {
        content: attr(href); /* here's the magic */
        position:absolute;
        
        /* vertically center */
        bottom:100%;
        transform:translateY(-50%);
        
        
        /* move to right */
        left:100%;
        transform:translateX(-50%);
        //margin-bottom:15px; /* and add a small left margin */
        
        //Hide text overflow and show ellipses
        white-space: nowrap;
        overflow: hidden;
        text-overflow: ellipsis;

        /* basic styles */
        max-width:250px; 
        padding:10px;
        border-radius:5px;
        background:black;
        color: white;
        text-align:center;
      
        display:none; /* hide by default */
      }

      a:hover:before {
        display:block;
      }


    }
  }
 
  textarea { 
    margin: 0px;
    padding: 0px;
    overflow: auto; 
    resize: none; 
    -webkit-resize: none;
    -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
    -moz-box-sizing: border-box;    /* Firefox, other Gecko */
    box-sizing: border-box; 
    width: 100%;
    height:98%;
    border-width: 0;
    border-color: transparent;
    
  }
   
}



.Resizer {
  background: #090 !important;
  opacity: 0.5 !important;
  z-index: 1; 
  -moz-box-sizing: border-box;
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
  -moz-background-clip: padding;
  -webkit-background-clip: padding;
  background-clip: padding-box;
}

/*.Resizer:hover {
  -webkit-transition: all 0.1s ease;
  transition: all 0.1s ease;
}*/

.Resizer.horizontal {
  height: 50px;
  margin: -50px 0 !important;
  border-top: 5px solid rgba(50, 50, 255, 0) !important;
  border-bottom: 50px solid rgba(50, 50, 255, 0) !important;
  cursor: row-resize;
  width: 100%;
}

.Resizer:hover {
  -webkit-transition: all 0.1s ease !important;
  transition: all 0.1s ease !important;
}

.Resizer.horizontal:hover {
  border-top: 50px solid rgba(0, 50, 0, 0.5)  !important;
  border-bottom: 5px solid rgba(0, 50, 0, 0.5) !important;
}

.Resizer.disabled {
  cursor: not-allowed;
}
.Resizer.disabled:hover {
  border-color: red !important;
}

